# JSGFKit_Plus_Plus

./: CMakeLists.txt
src/: Grammar.cpp
test/: CMakeLists.txt  IsOptionalTest.cpp  MatchingTest.cpp
